Changed many things

--- a/main-es6/plugins/hain-commands/package.json
+++ b/main-es6/plugins/hain-commands/package.json
@@ -9,6 +9,6 @@
   "hain": {
     "prefix": null,
     "usage": "/about, /restart, /quit",
-    "icon": "../../../images/hain.png"
+    "icon": "#fa fa-gear"
   }
 }
