--- a/package.json
+++ b/package.json
@@ -1,50 +1,26 @@
 {
-  "name": "hain",
-  "version": "0.0.1",
-  "description": "A alt+space launcher for Windows, built with Electron",
+  "name": "Hain",
   "main": "app/main/main.js",
   "scripts": {},
   "author": "Heejin Lee <monster@teamappetizer.com>",
   "license": "MIT",
-  "build": {
-    "iconUrl": "https://raw.githubusercontent.com/appetizermonster/hain/master/images/hain.ico"
-  },
-  "dependencies": {
-    "babel-polyfill": "^6.6.1",
-    "co": "^4.6.0",
-    "fs-extra": "^0.26.5",
-    "got": "^6.2.0",
-    "html-escape": "^1.0.2",
-    "jquery": "^2.2.1",
-    "lodash": "^4.6.0",
-    "material-ui": "^0.15.0-alpha.1",
-    "mathjs": "^3.0.0",
-    "node-hacker-news": "^0.1.1",
-    "node-localstorage": "^1.1.2",
-    "react": "^0.14.7",
-    "react-dom": "^0.14.7",
-    "react-notification": "^4.2.0",
-    "sanitize-html": "^1.11.3",
-    "semver": "^5.1.0",
-    "simple-lru-cache": "0.0.2",
-    "tarball-extract": "0.0.3",
-    "twitter-text": "^1.13.4",
-    "winreg": "^1.0.1",
-    "winston": "^2.2.0"
-  },
   "devDependencies": {
     "babel-cli": "^6.6.0",
     "babel-core": "^6.6.0",
     "babel-loader": "^6.2.4",
     "babel-preset-es2015": "^6.6.0",
     "babel-preset-react": "^6.5.0",
+    "electron-packager": "^5.2.1",
+    "electron-prebuilt": "^0.37.2",
     "eslint": "^2.3.0",
     "eslint-config-airbnb": "^6.1.0",
     "gulp": "^3.9.1",
     "gulp-babel": "^6.1.2",
+    "gulp-install": "^0.6.0",
     "gulp-shell": "^0.5.2",
     "gulp-sourcemaps": "^1.6.0",
     "gulp-util": "^3.0.7",
+    "merge-stream": "^1.0.0",
     "webpack-target-electron-renderer": "^0.4.0"
   }
 }
