--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "gulp-shell": "^0.5.2",
     "gulp-sourcemaps": "^1.6.0",
     "gulp-util": "^3.0.7",
+    "gulp-zip": "^3.2.0",
     "merge-stream": "^1.0.0",
     "webpack-target-electron-renderer": "^0.4.0"
   }
