--- a/app/package.json
+++ b/app/package.json
@@ -15,7 +15,7 @@
     "lodash": "^4.6.0",
     "material-ui": "^0.15.0-alpha.1",
     "mathjs": "^3.0.0",
-    "node-localstorage": "^1.1.2",
+    "node-persist": "0.0.10",
     "react": "^0.14.7",
     "react-dom": "^0.14.7",
     "react-notification": "^4.2.0",
