Several minor changes

--- a/app/main-es6/plugins/hain-package-manager/package.json
+++ b/app/main-es6/plugins/hain-package-manager/package.json
@@ -10,6 +10,7 @@
   "license": "MIT",
   "hain": {
     "prefix": "/hpm",
-    "icon": "#fa fa-cube"
+    "icon": "#fa fa-cube",
+    "redirect": "/hpm "
   }
 }
