--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "Hain",
+  "name": "hain",
   "main": "app/main/main.js",
   "scripts": {},
   "author": "Heejin Lee <monster@teamappetizer.com>",
@@ -10,9 +10,9 @@
     "babel-loader": "^6.2.4",
     "babel-preset-es2015": "^6.6.0",
     "babel-preset-react": "^6.5.0",
-    "electron-installer-squirrel-windows": "^1.3.0",
     "electron-packager": "^5.2.1",
     "electron-prebuilt": "^0.37.2",
+    "electron-winstaller": "^2.0.5",
     "eslint": "^2.3.0",
     "eslint-config-airbnb": "^6.1.0",
     "gulp": "^3.9.1",
