--- a/app/package.json
+++ b/app/package.json
@@ -20,6 +20,7 @@
     "react": "^0.14.7",
     "react-dom": "^0.14.7",
     "react-notification": "^4.2.0",
+    "react-schema-form": "^0.2.7",
     "sanitize-html": "^1.11.3",
     "semver": "^5.1.0",
     "simple-lru-cache": "0.0.2",
