--- a/app/package.json
+++ b/app/package.json
@@ -12,6 +12,7 @@
     "got": "^6.2.0",
     "html-escape": "^1.0.2",
     "jquery": "^2.2.1",
+    "json-schema-defaults": "^0.1.1",
     "lodash": "^4.6.0",
     "material-ui": "^0.15.0-alpha.2",
     "mathjs": "^3.0.0",
@@ -20,6 +21,7 @@
     "react-dom": "^0.14.7",
     "react-notification": "^4.2.0",
     "react-schema-form": "^0.2.7",
+    "react-tap-event-plugin": "^0.2.2",
     "sanitize-html": "^1.11.3",
     "semver": "^5.1.0",
     "simple-lru-cache": "0.0.2",
