Add showing internal plugins by `/hpm list`

--- a/app/main-es6/plugins/hain-commands/package.json
+++ b/app/main-es6/plugins/hain-commands/package.json
@@ -1,7 +1,7 @@
 {
   "name": "hain-commands",
-  "version": "1.0.0",
-  "description": "",
+  "version": "0.0.1",
+  "description": "Hain operation commands",
   "main": "index.js",
   "scripts": {},
   "author": "Heejin Lee <monster@teamappetizer.com>",
