--- a/app/package.json
+++ b/app/package.json
@@ -25,6 +25,7 @@
     "semver": "^5.1.0",
     "simple-lru-cache": "0.0.2",
     "tarball-extract": "0.0.3",
+    "tunnel": "0.0.4",
     "twitter-text": "^1.13.4",
     "winreg": "^1.0.1",
     "winston": "^2.2.0"
