--- a/app/main-es6/plugins/hain-commands/package.json
+++ b/app/main-es6/plugins/hain-commands/package.json
@@ -8,7 +8,7 @@
   "license": "MIT",
   "hain": {
     "prefix": null,
-    "usage": "/about, /restart, /quit",
+    "usage": "/about, /preferences, /restart, /quit",
     "icon": "#fa fa-gear",
     "group": "Hain Operation Commands"
   }
