--- a/package.json
+++ b/package.json
@@ -3,7 +3,8 @@
   "main": "app/main-es6/main.js",
   "scripts": {
     "dev": "gulp && electron .",
-    "build": "gulp build-all"
+    "build": "gulp build-all",
+    "test": "cd app && node ../node_modules/jest-cli/bin/jest"
   },
   "author": "Heejin Lee <monster@teamappetizer.com>",
   "license": "MIT",
@@ -25,6 +26,7 @@
     "gulp-shell": "^0.5.2",
     "gulp-sourcemaps": "^1.6.0",
     "gulp-util": "^3.0.7",
-    "gulp-zip": "^3.2.0"
+    "gulp-zip": "^3.2.0",
+    "jest-cli": "^0.10.0"
   }
 }
