Implement to find compatible plugins only on `/hpm install` (by using COMPATIBLE_API_VERSION variable)

--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -16,5 +16,8 @@
     "curly": "off",
     "padded-blocks": "off",
     "no-use-before-define": "warn"
+   },
+   "env": {
+     "jest": true
    }
 }
