Use modularized lodash instead of lodash itself to reduce memory usage

--- a/app/package.json
+++ b/app/package.json
@@ -14,7 +14,29 @@
     "html-escape": "^1.0.2",
     "jquery": "^2.2.1",
     "jsonschema": "^1.1.0",
-    "lodash": "^4.6.0",
+    "lodash.assign": "^4.0.7",
+    "lodash.clamp": "^4.0.2",
+    "lodash.clonedeep": "^4.3.2",
+    "lodash.find": "^4.3.0",
+    "lodash.first": "^3.0.0",
+    "lodash.get": "^4.2.1",
+    "lodash.has": "^4.3.1",
+    "lodash.includes": "^4.1.2",
+    "lodash.isarray": "^4.0.0",
+    "lodash.isequal": "^4.1.4",
+    "lodash.isfunction": "^3.0.8",
+    "lodash.isnumber": "^3.0.3",
+    "lodash.isobject": "^3.0.2",
+    "lodash.isplainobject": "^4.0.4",
+    "lodash.isstring": "^4.0.1",
+    "lodash.keys": "^4.0.6",
+    "lodash.map": "^4.3.0",
+    "lodash.orderby": "^4.3.0",
+    "lodash.reject": "^4.3.0",
+    "lodash.remove": "^4.3.0",
+    "lodash.set": "^4.1.0",
+    "lodash.size": "^4.0.6",
+    "lodash.uniq": "^4.2.1",
     "material-ui": "^0.15.0-alpha.2",
     "mathjs": "^3.0.0",
     "node-persist": "0.0.10",
