Update chocolatey nuspec

--- a/chocolatey/Hain.nuspec
+++ b/chocolatey/Hain.nuspec
@@ -2,7 +2,7 @@
 <package xmlns="http://schemas.microsoft.com/packaging/2010/07/nuspec.xsd">
   <metadata>
     <id>Hain</id>
-    <version>0.0.2-rc4</version>
+    <version>0.1.0</version>
     <title>Hain</title>
     <authors>Heejin Lee</authors>
     <owners>FlorianRappl</owners>
