--- a/package.json
+++ b/package.json
@@ -26,10 +26,12 @@
     "gulp": "^3.9.1",
     "gulp-babel": "^6.1.2",
     "gulp-install": "^0.6.0",
+    "gulp-replace": "^0.5.4",
     "gulp-shell": "^0.5.2",
     "gulp-sourcemaps": "^1.6.0",
     "gulp-util": "^3.0.7",
     "gulp-zip": "^3.2.0",
-    "jest-cli": "^0.10.0"
+    "jest-cli": "^0.10.0",
+    "merge-stream": "^1.0.0"
   }
 }
