--- a/package.json
+++ b/package.json
@@ -31,7 +31,6 @@
     "gulp-sourcemaps": "^1.6.0",
     "gulp-util": "^3.0.7",
     "gulp-zip": "^3.2.0",
-    "jest-cli": "^0.10.0",
-    "merge-stream": "^1.0.0"
+    "jest-cli": "^0.10.0"
   }
 }
