--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "babel-preset-es2015": "^6.6.0",
     "babel-preset-react": "^6.5.0",
     "del": "^2.2.0",
+    "electron-installer-debian": "^0.3.0",
     "electron-packager": "^5.2.1",
     "electron-prebuilt": "0.37.2",
     "electron-winstaller": "^2.0.5",
