test if there is a state between scripts

--- a/.travis.yml
+++ b/.travis.yml
@@ -2,7 +2,7 @@ language: node_js
 node_js:
   - '5'
 before_script: "cd app && npm install"
-before_deploy: "sh deploy-travis.sh"
+before_deploy: "cd ../ && sh deploy-travis.sh"
 deploy:
   provider: releases
   api_key:
